--- a/package.json
+++ b/package.json
@@ -33,17 +33,20 @@
     },
     "homepage": "https://github.com/tsastro/tsofa#readme",
     "devDependencies": {
+        "@eslint/js": "^9.9.1",
         "@types/node": "^20.7.1",
         "@typescript-eslint/eslint-plugin": "^6.17.0",
         "@typescript-eslint/parser": "^6.17.0",
-        "eslint": "^8.49.0",
+        "eslint": "^9.9.1",
         "eslint-plugin-import": "^2.28.1",
         "eslint-plugin-jsdoc": "^46.8.1",
         "eslint-plugin-prefer-arrow": "^1.2.3",
+        "globals": "^15.9.0",
         "testyts": "^1.5.0",
         "ts-node": "^10.9.1",
         "typedoc": "^0.25.6",
-        "typescript": "^5.2.2"
+        "typescript": "^5.2.2",
+        "typescript-eslint": "^8.3.0"
     },
     "dependencies": {}
 }
