--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "private": false,
     "scripts": {
         "build": "tsc",
-        "test": "testyts",
+        "test": "jest --watch",
         "doc": "typedoc src/main/ts/TSOFA.ts",
         "eslint": "eslint ."
     },
@@ -42,7 +42,8 @@
         "eslint-plugin-jsdoc": "^46.8.1",
         "eslint-plugin-prefer-arrow": "^1.2.3",
         "globals": "^15.9.0",
-        "testyts": "^1.5.0",
+        "jest": "^29.7.0",
+        "ts-jest": "^29.2.5",
         "ts-node": "^10.9.1",
         "typedoc": "^0.25.6",
         "typescript": "^5.2.2",
