--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "private": false,
     "scripts": {
         "build": "tsc",
-        "test": "jest --watch",
+        "test": "jest",
         "doc": "typedoc src/main/ts/TSOFA.ts",
         "eslint": "eslint ."
     },
