--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@tsastro/tsofa",
-    "version": "18.1.0",
+    "version": "18.2.0",
     "type": "module",
     "description": "a typescript transcription of the IAU SOFA library",
     "author": "Paul Harrison <paul.harrison@manchester.ac.uk>",
@@ -8,7 +8,7 @@
     "private": false,
     "scripts": {
         "build": "tsc",
-        "test": "jest",
+        "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
         "doc": "typedoc src/main/ts/TSOFA.ts",
         "eslint": "eslint ."
     },
@@ -33,11 +33,14 @@
     },
     "homepage": "https://github.com/tsastro/tsofa#readme",
     "devDependencies": {
-        "@eslint/js": "^9.9.1",
+        "@eslint/js": "^8.57.0",
+        "@jest/globals": "^29.7.0",
+        "@tsconfig/node22": "^22.0.0",
+        "@types/jest": "^29.5.12",
         "@types/node": "^20.7.1",
         "@typescript-eslint/eslint-plugin": "^6.17.0",
         "@typescript-eslint/parser": "^6.17.0",
-        "eslint": "^9.9.1",
+        "eslint": "^8.57.0",
         "eslint-plugin-import": "^2.28.1",
         "eslint-plugin-jsdoc": "^46.8.1",
         "eslint-plugin-prefer-arrow": "^1.2.3",
