--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,20 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
+  "display": "Node 22",
+  "_version": "22.4.0",
+  "type": "module",
   "compilerOptions": {
-    "module": "ESNext",
-    "target": "ES2020",
+    "module": "NodeNext",
+    "target": "ESNext",
     "declaration": true,
     "sourceMap": true,
     "declarationMap": true,
+    "allowJs": true,
     "esModuleInterop": true,
-    "strict": false,
-    "moduleResolution": "Node",
-    "experimentalDecorators": true,
+    "moduleResolution": "NodeNext",
+    "lib": [ "ESNext" ] ,
+    "types": ["node", "jest"],
     "outDir": "./dist"
   },
-  "include": [
-    "src/main/ts/**/*"
-  ]
+  "include": ["src/main/ts/**/*"]
 }
