--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@tsastro/tsofa",
-    "version": "18.2.0",
+    "version": "18.1.0",
     "type": "module",
     "description": "a typescript transcription of the IAU SOFA library",
     "author": "Paul Harrison <paul.harrison@manchester.ac.uk>",
@@ -8,11 +8,11 @@
     "private": false,
     "scripts": {
         "build": "tsc",
-        "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+        "test": "jest",
         "doc": "typedoc src/main/ts/TSOFA.ts",
         "eslint": "eslint ."
     },
-    "main": "dist/TSOFA.js",
+    "exports": "./dist/TSOFA.js",
     "types": "dist/TSOFA.d.ts",
     "files": [
         "/dist"
