move from yarn to npm

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -11,19 +11,9 @@ jobs:
       - name: Set Node.js 22.x
         uses: actions/setup-node@v4
         with:
-          node-version: 22.x
-
-      - name: Run install
-        uses: borales/actions-yarn@v4
-        with:
-          cmd: install # will run `yarn install` command
+          node-version: 22
+      - run: npm ci
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }} # if needed
-      - name: Build production bundle
-        uses: borales/actions-yarn@v4
-        with:
-          cmd: build
-      - name: Test the app
-        uses: borales/actions-yarn@v4
-        with:
-          cmd: test # will run `yarn test` command
+          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+      - run: npm test
+
